--- a/template.css
+++ b/template.css
@@ -1,6 +1,3 @@
-.field {
-    display: flex;
-}
 .divAllParent {
     width: 960;
     margin-left: auto;
@@ -20,7 +17,7 @@
     margin: 4px 2px 4px 4px;
     padding: 10px 2px 10px 2px;
     font-size: 32px;
-    background-color: #999;
+    background-color: #666;
     color: #f9e6ff;
 }
 
@@ -31,7 +28,7 @@
     margin: 4px 2px 4px 4px;
     padding: 10px 2px 10px 2px;
     font-size: 32px;
-    background-color: #999;
+    background-color: #666;
     color: #e6fff0;
 }
 
@@ -42,7 +39,7 @@
     margin: 4px 2px 4px 4px;
     padding: 10px 2px 10px 2px;
     font-size: 32px;
-    background-color: #999;
+    background-color: #666;
     color: #fff9e6;
 }
 
@@ -53,10 +50,12 @@
     margin: 4px 2px 4px 4px;
     padding: 10px 2px 10px 2px;
     font-size: 32px;
-    background-color: #999;
+    background-color: #666;
     color: #e6f0ff;
 }
 
 .divMain{
     width: 960;
+    margin-left: auto;
+    margin-right: auto;
 }
